@@ -1,55 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML>
-<HEAD>
-	<META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=utf-8">
-	<TITLE></TITLE>
-	<META NAME="GENERATOR" CONTENT="LibreOffice 3.3  (Linux)">
-	<META NAME="CREATED" CONTENT="0;0">
-	<META NAME="CHANGED" CONTENT="20110105;14152900">
-	<META NAME="CHANGEDBY" CONTENT="Sebastiaan Mathot">
-	<META NAME="CHANGEDBY" CONTENT="Sebastiaan Mathot">
-	<META NAME="CHANGEDBY" CONTENT="Sebastiaan Mathot">
-	<STYLE TYPE="text/css">
-	<!--
-		@page { margin: 0.79in }
-		P { margin-bottom: 0.08in }
-		H1 { margin-bottom: 0.08in }
-		H1.western { font-family: "Arial", sans-serif; font-size: 16pt }
-		H1.cjk { font-family: "DejaVu Sans"; font-size: 16pt }
-		H1.ctl { font-family: "Lohit Hindi"; font-size: 16pt }
-		H2 { margin-bottom: 0.08in }
-		H2.western { font-family: "Arial", sans-serif; font-size: 14pt; font-style: italic }
-		H2.cjk { font-family: "Droid Sans Fallback"; font-size: 14pt; font-style: italic }
-		H2.ctl { font-family: "Lohit Hindi"; font-size: 14pt; font-style: italic }
-		A:link { so-language: zxx }
-	-->
-	</STYLE>
-</HEAD>
-<BODY LANG="en-US" DIR="LTR">
-<H1 CLASS="western">SR Box</H1>
-<P>The SR (serial response) box item collects responses from a
-buttonbox connected to the serial port or via USB to a 'virtual
-serial port'.</P>
-<H2 CLASS="western">Dummy mode</H2>
-<P>In dummy mode the SR Box is emulated by the numeric keys of the keyboard.
-This is convenient when you want to test your experiment without an SR Box.
-</P>
-<H2 CLASS="western">Advantages of a buttonbox over a keyboard</H2>
-<P>The temporal accuracy of a buttonbox is much better than that of a
-keyboard. In addition, participants are less likely to press the
-wrong button on a buttonbox. A buttonbox also looks much more
-professional than a keyboard, which will have a beneficial effect on
-participants' motivation.</P>
-<H2 CLASS="western">Names of buttons and lights</H2>
-<P>Buttons and lights are identified by a single digit between 1 and
-8. How many buttons there are and which button corresponds to which
-digit depends on your specific buttonbox. On the SR Box sold by
-Psychology Software Tools, Inc. there are 5 buttons and 5 lights,
-where button 1 and light 1 are on the left. On other SR Boxes lights
-may not be available, in which case the light input is ignored.</P>
-<H2 CLASS="western">Compatible devices</H2>
-<P>This item can be used with the SR Box (Psychology Software Tools,
-Inc.) and compatible devices. For more information, see
-<A HREF="http://www.pstnet.com/hardware.cfm?ID=102">http://www.pstnet.com/hardware.cfm?ID=102</A>.</P>
-</BODY>
-</HTML>
