@@ -3,6 +3,7 @@ opensesame (3.0.1a1-ubuntu1) vivid; urgency=medium
   * Bugs fixed
     - Fix crash on fallback_console reset
     - Catch syntax warnings in inline_script items
+    - Update srbox plugin to avoid warnings
   * Improvements
     - Give more informative error messages when using invalid variable names
     - Update auto_example plugin
